--- a/SuperAdmin/index.html
+++ b/SuperAdmin/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/admin-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/admin-favicon.svg" />
+    <link rel="apple-touch-icon" href="/admin-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="TeamTaatom SuperAdmin Dashboard - Manage your travel platform" />
+    <meta name="theme-color" content="#2563EB" />
     <title>TeamTaatom SuperAdmin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
