--- a/SuperAdmin/index.html
+++ b/SuperAdmin/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/admin-favicon.svg" />
-    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/admin-favicon.svg" />
-    <link rel="apple-touch-icon" href="/admin-favicon.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TeamTaatom SuperAdmin Dashboard - Manage your travel platform" />
     <meta name="theme-color" content="#2563EB" />
-    <title>TeamTaatom SuperAdmin</title>
+    <title>Taatom SuperAdmin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
